syntax = "proto3";

package user;

option go_package = "github.com/levensspel/go-gin-template/proto";

service UserService {
  rpc RegisterUser(RequestRegister) returns (ResponseRegister) {}
  rpc Login(ResponseRegister) returns (ResponseRegister) {}
}

message RequestRegister {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

message ResponseRegister {
  string user_id = 1;

  uint32 status_code = 2;
  string message = 3;
}
